--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -5681,8 +5681,8 @@ button.list-group-item-danger.active:focus {
   border-color: #ddd;
 }
 .panel-default > .panel-heading {
-  color: #333;
-  background-color: #f5f5f5;
+  color: white;
+  background-color: #004F71;
   border-color: #ddd;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
