--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1086,7 +1086,6 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
-  background-color: #fff;
 }
 input,
 button,
@@ -6815,9 +6814,8 @@ button.close {
   z-index: 3;
 }
 
-<<<<<<< HEAD
 /* 18/12/2018 - CSS */
-=======
+
 .wellClient {
   min-height: 20px;
   padding-top: 19px;
@@ -6872,4 +6870,24 @@ button.close {
 }
 
 /* 17/12/2018 - FIN DESIGN PERSONNALIZE */
->>>>>>> 076d363ab8c0355033b4d94e010d1061230b4e87
+
+/* 28/12/2018 - DEBUT DESIGN PERSONNALIZE */
+
+.btn-loginConnexion
+{
+
+  background-color: #004F71;
+  color: white;
+
+}
+
+.wellLoginEntreprise {
+  min-height: 20px;
+  padding: 19px;
+  margin-top: 50px;
+  background-color: white;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+
+/* 28/12/2018 - FIN DESIGN PERSONNALIZE */
