Mise a jour dashboard / profil / nouveauClient / Maj Crud

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6891,3 +6891,17 @@ button.close {
 }
 
 /* 28/12/2018 - FIN DESIGN PERSONNALIZE */
+
+/* 03/01/2018 - DEBUT DESIGN PERSONNALIZE */
+
+.padCircle {
+
+  padding-top: 20px;
+  padding-left: 5%;
+
+}
+
+
+
+
+/* 03/01/2018 - FIN DESIGN PERSONNALIZE */ 
