--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6814,6 +6814,14 @@ button.close {
   z-index: 3;
 }
 
+#img3 {
+  position: relative;
+  z-index: 4;
+  bottom: 0;
+  margin-left: 15px;
+  margin-top: 30%;
+}
+
 /* 18/12/2018 - CSS */
 
 .wellClient {
@@ -6892,7 +6900,7 @@ button.close {
 
 /* 28/12/2018 - FIN DESIGN PERSONNALIZE */
 
-/* 03/01/2018 - DEBUT DESIGN PERSONNALIZE */
+/* 03/01/2019 - DEBUT DESIGN PERSONNALIZE */
 
 .padCircle {
 
@@ -6900,8 +6908,47 @@ button.close {
   padding-left: 5%;
 
 }
+/* 03/01/2019 - FIN DESIGN PERSONNALIZE */ 
 
+/* 04/01/2019 */
 
+.msgSuccessPerso {
 
+  min-height: 50px;
+  height: auto;
+  background-color: #77A248;
+  padding: 20px;
+  color: white;
+  text-align: center;
 
-/* 03/01/2018 - FIN DESIGN PERSONNALIZE */ 
+}
+
+.msgErrorPerso {
+
+  min-height: 50px;
+  height: auto;
+  background-color: #CA433B;
+  padding: 20px;
+  color: white;
+  text-align: center;
+
+}
+
+.cadreAddCarte {
+
+  padding-top: 25px;
+  padding-left: 12%;
+
+}
+
+.wellAddCarte {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid black;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+
+/* 04/01/2019 */
