--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6965,3 +6965,19 @@ button.close {
 }
 
 /* 04/01/2019 */
+
+/* 09/01/2019 */
+
+.wellCadeaux
+{
+
+  background-color: #F2F2F2;
+  min-height: 60px;
+  height: auto;
+  padding: 15px;
+
+}
+
+
+
+/* 09/01/2019 */
