--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -11893,3 +11893,27 @@ body.sidebar-toggled footer.sticky-footer {
 }
 
 /* 04/02/2019 */
+
+/* 06/02/2019 */
+
+.card-pricing.popular {
+  z-index: 1;
+  border: 3px solid #007bff;
+}
+.card-pricing .list-unstyled li {
+  padding: .5rem 0;
+  color: #6c757d;
+}
+
+.headerTitle
+{
+
+    min-height: 60px;
+    background-color: #4E73DF;
+    color: white;
+    font-size: 20px;
+    padding: 15px;
+
+}
+
+/* 06/02/2019 */ 
