Ajout de chartJS / Liaison pointage avec prestations en cours

--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -11916,3 +11916,14 @@ body.sidebar-toggled footer.sticky-footer {
 }
 
 /* 06/02/2019 */ 
+
+/* 12/02/2019 */
+
+
+.chart-container {
+  position: relative;
+  margin: auto;
+}
+
+
+/* 12/02/2019 */
