Integration loader partie entreprise

--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -11968,3 +11968,15 @@ body.sidebar-toggled footer.sticky-footer {
 
 
 /* 18/02/2019 */
+
+/* 23/02/2019 */
+
+.styleLoader
+{
+
+    padding: 20%;
+
+
+}
+
+/* 23/02/2019 */
