--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -11969,121 +11969,13 @@ body.sidebar-toggled footer.sticky-footer {
 
 /* 18/02/2019 */
 
-/* 23/02/2019 */
+/* 02/03/2019 */
 
 .styleLoader
 {
 
-    padding: 20%;
-
+    padding-top: 20%;
 
 }
 
-/* 23/02/2019 */
-
-/* 26/02/2019 */
-
-.control-buttons {
-  -ms-flex-direction: row;
-  flex-direction: row;
-  width: 100%;
-  border: 1px solid #ccc;
-}
-.button-control, .control-buttons {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.control-buttons button {
-  width: 17%;
-}
-
-.button-control, .control-buttons {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-.button-control {
-  border: none;
-  background: none;
-  padding: 6px;
-  border-left: 1px solid #ccc;
-}
-
-.modal-wrapper {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  z-index: 10;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  position: fixed;
-  -ms-flex-align: center;
-  align-items: center;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: hsla(0,0%,100%,.5);
-}
-
-.modal, .modal-nude {
-  z-index: 102;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-.modal {
-  padding: 15px;
-  -webkit-box-shadow: rgba(0,0,0,.2) 0 2px 6px;
-  box-shadow: 0 2px 6px rgba(0,0,0,.2);
-  background: #fff;
-}
-
-.modal-close {
-  margin-left: 97%;
-  position: relative;
-  width: 18px;
-  height: 18px;
-  line-height: 1.3;
-  text-align: center;
-  font-size: 14px;
-  background: #222;
-  color: #fff;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.modal-title {
-  margin: 5px;
-  font-size: 20px;
-}
-
-.agendCtrls-wrapper {
-  text-align: center;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.agendCtrls-label-wrapper, .agendCtrls-radio-buttons, .agendCtrls-timePicker-wrapper {
-  display: -ms-flexbox;
-  display: flex;
-}
-.agendCtrls-timePicker-wrapper {
-  -ms-flex-direction: row;
-  flex-direction: row;
-  padding-top: 8px;
-}
-
-/* 26/02/2019 */
+/* 02/03/2019 */ 
