--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -6441,6 +6441,7 @@ a.close.disabled {
 }
 
 .carousel {
+  margin-top: 10%;
   position: relative;
 }
 
@@ -10395,6 +10396,7 @@ a:focus {
   background-color: #f8f9fc;
   width: 100%;
   overflow-x: hidden;
+  height: 65em;
 }
 
 #wrapper #content-wrapper #content {
@@ -11851,6 +11853,12 @@ body.sidebar-toggled footer.sticky-footer {
   color: white;
 }
 
+.panelCarteDeux {
+  position: static;
+  height: 300px;
+  color: white;
+}
+
 #img1 {
   position: absolute;
   z-index: 2;
@@ -11873,6 +11881,17 @@ body.sidebar-toggled footer.sticky-footer {
 
 #img4 {
   z-index: 4;
+}
+
+#img5 {
+  z-index: 2;
+}
+
+#img6 {
+  position: absolute;
+  left: 0;
+  z-index: 3;
+  margin: 10px;
 }
 
 #positionDonnee {
