--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -12054,3 +12054,52 @@ body.sidebar-toggled footer.sticky-footer {
 
 
 /* 20/03/2019 */
+
+/* 06/04/2019 */
+
+.cadreBoutonGrouper
+{
+
+  margin-top: 2.5%;
+
+}
+
+
+/* 06/04/2019 */
+
+/* 11/04/2019 */
+
+
+.cardClient{
+
+  width: 100%;
+  min-height: 80px;
+  height: auto;
+  padding: 15px;
+  background-color: white;
+  border-bottom: 1px solid #DDDFEB;
+  color: black;
+
+}
+
+.cardClient:hover{
+
+  width: 100%;
+  min-height: 80px;
+  height: auto;
+  padding: 15px;
+  background-color: #EBECEF;
+  border-bottom: 1px solid #DDDFEB;
+  color: black;
+
+}
+
+.cardClient:hover a {
+
+  color: black;
+  text-decoration: none;
+
+}
+
+
+/* 11/04/2019 */
